header and home create

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,7 @@
   <!-- Full Width Column -->
   <div class="content-wrapper">
     <div class="container">
-
-      {{content}}
-
+     <mt-home></mt-home>
     </div>
   </div>
 
